feat: Add Trash feature (cherry-picked from dev-main)
